// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<div
  aria-hidden="true"
  className="modal fade"
  id="confirmDeleteModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-body"
      >
        <h5>
          Are you sure?
        </h5>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          disabled={false}
          type="button"
        >
          Cancel
        </button>
        <button
          className="btn btn-danger"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders 2`] = `
<div
  aria-hidden="true"
  className="modal fade"
  id="confirmDeleteModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-body"
      >
        <h5>
          Are you sure?
        </h5>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          disabled={true}
          type="button"
        >
          Cancel
        </button>
        <button
          className="btn btn-danger"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;
